--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>
   {{title}}
 </h1>
+<input [(ngModel)]="word" placeholder="selectedLetter" pattern="^[a-z]$" limit='1' />
+<app-images></app-images>
