Can now enter in numbers and a word to produce applicable combinations for the word

--- a/src/app/images/images.component.css
+++ b/src/app/images/images.component.css
@@ -1,5 +1,10 @@
 img{
    display:block;
+   margin: auto;
   /* width:10%;
   height: 10%;  */
+}
+.imgContainer{
+  display: inline-block;
+  align-content: center;
 }
