--- a/src/app/images/images.component.css
+++ b/src/app/images/images.component.css
@@ -1,10 +1,15 @@
 img{
-   display:block;
-   margin: auto;
-  /* width:10%;
-  height: 10%;  */
+  display:block;
+  margin: auto;
+  width: 40%;
+  height: 40%; 
 }
 .imgContainer{
   display: inline-block;
   align-content: center;
+}
+
+.selectedImage{
+  width: 20%;
+  height: 20%;
 }
