--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,4 +1,4 @@
-<input [(ngModel)]="word" placeholder="selectedLetter" pattern="^[a-z]$" limit='1' />
+<!-- <input [(ngModel)]="word" placeholder="selectedLetter" pattern="^[a-z]$" limit='1' />
 <input type="text" [(ngModel)]="letters[0]" placeholder="Enter text here" (keyup)="eval(1, 3)">
 <input type="text" [(ngModel)]="letters[1]" placeholder="Enter text here" (keyup)="eval(2, 6)">
 <input type="text" [(ngModel)]="letters[2]" placeholder="Enter text here" (keyup)="eval(3, 9)">
@@ -7,9 +7,20 @@
   <div *ngFor="let letter of answer">
     {{letter}}
   </div>
-</div>
+</div> -->
 <!-- <div *ngFor="let row of imageURLs">
   <div *ngFor="let ir of row" class="imgContainer">
     <img class="row" [src]="ir">
   </div>
 </div> -->
+
+<span>
+
+  <button *ngIf="!display" (click)="changeDisplay()"> {{choice}}</button>
+  <div *ngIf="display">
+    <button (click)="changeDisplay()"> Cancel </button><br>
+    <span *ngFor="let image of imageURLs" class="imgContainer">
+    <img [src]="image" (click)="selectLetter(image)">
+  </span>
+</div>
+</span>
