--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,11 @@
   Enter your word in the text box and click on the select symbol buttons and click on the your symbol in the order that they
   appear from Slappy Taffy towards the ice cream shop.
 </p>
-<input type="text" [(ngModel)]="word" (keypress)="evalWord($event)">
-<div *ngIf="answerAvailable">
-  <div *ngFor="let row of answer">
-    {{row}}
-  </div>
-</div>
+<input type="text" [(ngModel)]="word" (keyup)="evalWord($event)">
 <app-images (letter)="setLetter($event, 1)"></app-images>
 <app-images (letter)="setLetter($event, 2)"></app-images>
 <app-images (letter)="setLetter($event, 3)"></app-images>
 <app-images (letter)="setLetter($event, 4)"></app-images>
+<div *ngFor="let row of answer">
+  {{row}}
+</div>
